# sampling

./: .clang-format  CMakeLists.txt  README.md
source/: CMakeLists.txt
source/core/: random.hpp  types.hpp
source/sampling/: elementary.hpp  sampler.hpp
